--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1265,3 +1265,43 @@ li:hover > a > .right {
 .gallery2 {
     display: none;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.menu-items {
+    display: none;
+}
+
+
+#toggle {
+    display: none;
+}
+
+
+#header-cz3 {
+    display: none;
+}
+
+
+
