--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -384,6 +384,9 @@ iframe {
     transition: var(--gallery-transition-dwa);
     text-align: center;
     border-radius: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -396,7 +399,9 @@ iframe {
 
 
 .images-top > p {
-    margin-top: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
