--- a/assets/styles/relative.css
+++ b/assets/styles/relative.css
@@ -14,7 +14,9 @@
         z-index: -11 !important;
     }
 
-
+    #logo-center {
+        margin-top: 15px;
+    }
 
 
 
@@ -23,7 +25,7 @@
         top: 30% !important;
         transform: translate(-50%, -30%) !important;
         width: 350px;
-        height: 700px;
+        height: 600px;
         background-image: url("../../assets/images/content.png");
     }
     .visible {
@@ -113,6 +115,18 @@
     }
 
 
+
+
+
+
+
+
+
+
+
+
+
+
     .gallery {
         display: none !important;
     }
@@ -121,7 +135,6 @@
         top: 92% !important;
         transform: translate(-50%, -92%) !important;
         position: absolute !important;
-        display: block !important;
         background-color: #000 !important;
         text-align: center !important;
         display: flex !important;
@@ -130,14 +143,14 @@
         justify-content: center !important;
         align-content: center !important;
         border-radius: 20px !important;
-        width: 290px !important;
-        height: 430px !important;
+        width: 190px !important;
+        height: 280px !important;
     }
 
     .gallery-row {
         padding-left: 10px !important;
-        width: 280px !important;
-        height: 130px !important;
+        width: 180px !important;
+        height: 80px !important;
         background-color: transparent !important;
     }
     .gallery-row:nth-child(2) {
@@ -145,18 +158,33 @@
     }
 
     .images > img {
-        width: 130px !important;
-        height: 130px !important;
+        width: 80px !important;
+        height: 80px !important;
     }
 
     .images-top {
-        width: 130px !important;
-        height: 130px !important;
+        width: 80px !important;
+        height: 80px !important;
     }
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     iframe {
         width: 95% !important;
+        height: 160px;
+        margin-top: 0px !important;
     }
 
 
