--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -265,6 +265,10 @@ body {
     margin-top: -30px !important;
 }
 
+#osiagniecia > .content-in > img {
+    margin-top: -20px !important;
+}
+
 
 
 
