--- a/assets/styles/relative.css
+++ b/assets/styles/relative.css
@@ -114,6 +114,10 @@
         margin-top: 5px !important;
     }
 
+    #osiagniecia > .content-in > img {
+        margin-top: 5px !important;
+    }
+
 
 
 
